--- a/data/sample1/setting.yaml
+++ b/data/sample1/setting.yaml
@@ -6,7 +6,7 @@
 bookId: f66fd2ea-02d9-b449-10f1-215c6a891743
 language: ja-JP
 modified: "2022-01-31T00:00:00Z"
-title: Pilots
+title: サンプル
 authorName: 松田未完
 authorRole: aut
 authorCopyRight: (C) 松田未完 2022
@@ -43,34 +43,45 @@ resources:
         replaceContent: <ruby>\1<rt>\2</rt></ruby>
     files:
       - title: はじめに
+        fileType: text
         filePath: .\resource\content\00はじめに.txt
       - title: 避けろ！
+        fileType: text
         filePath: .\resource\content\01避けろ！.txt
       - title: あとがき
+        fileType: text
         filePath: .\resource\content\01避けろ！_あとがき.txt
       - title: 誰も信じられない
+        fileType: text
         filePath: .\resource\content\02誰も信じられない.txt
       - title: あとがき
+        fileType: text
         filePath: .\resource\content\02誰も信じられない_あとがき.txt
       - title: ヒカゲノナシ
+        fileType: text
         filePath: .\resource\content\03ヒカゲノナシ.txt
       - title: あとがき
+        fileType: text
         filePath: .\resource\content\03ヒカゲノナシ_あとがき.txt
       - title: インヘリターズ
+        fileType: text
         filePath: .\resource\content\04インヘリターズ.txt
         replaces:
           - type: regex
             placeHolder: ([0-9]{1,2})号
             replaceContent: <span class="tcu">\1</span>号
       - title: あとがき
+        fileType: text
         filePath: .\resource\content\04インヘリターズ_あとがき.txt
         replaces:
           - type: regex
             placeHolder: ([0-9]{1,2})号
             replaceContent: <span class="tcu">\1</span>号
       - title: それでも生きていく
+        fileType: text
         filePath: .\resource\content\05それでも生きていく.txt
       - title: あとがき
+        fileType: text
         filePath: .\resource\content\05それでも生きていく_あとがき.txt
 # ------------------------------
 # コンテンツ情報
