--- a/data/sample1/setting.yaml
+++ b/data/sample1/setting.yaml
@@ -98,6 +98,7 @@ contents:
   # 目次
   - filePath: .\template\navigation.xhtml
     isNavigationContent: true
+    useNavigationContent: true
     createByChaptersCount: false
     replaces:
       - type: simple
