--- a/data/sample1/setting.yaml
+++ b/data/sample1/setting.yaml
@@ -3,10 +3,10 @@
 # ------------------------------
 # 基本情報
 # ------------------------------
-bookId: f66fd2ea-02d9-b449-10f1-215c6a891743
+bookId: ead92671-5748-56ed-9d26-5666305f8a89
 language: ja-JP
 modified: "2022-01-31T00:00:00Z"
-title: サンプル
+title:  Pilots
 authorName: 松田未完
 authorRole: aut
 authorCopyRight: (C) 松田未完 2022
@@ -98,7 +98,7 @@ contents:
   # 目次
   - filePath: .\template\navigation.xhtml
     isNavigationContent: true
-    useNavigationContent: true
+    isNavigationContent: true
     createByChaptersCount: false
     replaces:
       - type: simple
